// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`assign not assignable entity 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity cannot be assigned],
  ],
}
`;

exports[`assign not assignable to 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity cannot be assigned],
  ],
}
`;

exports[`assign assign checklist to worker 1`] = `
{
  "data": {
    "assign": {
      "__typename": "AssignmentPayload",
      "assignedTo": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [
            {
              "__typename": "AssigneeEdge",
              "node": {
                "__typename": "Assignee",
                "assignedTo": {
                  "__typename": "Worker",
                  "displayName": "Will Ruggiano",
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`assign already assigned 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity already assigned],
  ],
}
`;

exports[`assign idempotent 1`] = `
{
  "data": {
    "assign": {
      "__typename": "AssignmentPayload",
      "assignedTo": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [
            {
              "__typename": "AssigneeEdge",
              "node": {
                "__typename": "Assignee",
                "assignedTo": {
                  "__typename": "Worker",
                  "displayName": "Will Ruggiano",
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;
